Support packaged database migrator launches
(cherry picked from commit db1224a3e0ecf2f6fce1c3d3cfcbc452f600dfbd)